--- a/Phase 3/royal_salon/android/app/src/main/AndroidManifest.xml
+++ b/Phase 3/royal_salon/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
    <application
         android:label="royal_salon"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="YOUR KEY HERE"/>
+        
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
