--- a/Phase 3/royal_salon/pubspec.yaml
+++ b/Phase 3/royal_salon/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   flutter_spinkit: ^5.1.0
 
+  dio: ^4.0.0
+  flutter_polyline_points: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,6 +45,7 @@ dependencies:
   tuple: ^2.0.0
   shared_preferences: ^2.0.8
   google_maps_flutter: ^2.1.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
