--- a/Phase 3/Final_Project/Final_Royal_Salon_App/myfinal_app/pubspec.yaml
+++ b/Phase 3/Final_Project/Final_Royal_Salon_App/myfinal_app/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   http: ^0.13.4
   image_picker: ^0.8.4+4
   image_picker_for_web: ^2.1.4
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
